GNOME Bugzilla – Bug 689289
modem-manager crashed with SIGSEGV
Last modified: 2012-11-30 15:09:04 UTC
Forwarded from: https://bugs.launchpad.net/ubuntu/+source/modemmanager/+bug/1083659 modemmanager: Installed: 0.6.0.0.really+git201211281825.1195-0~pkg164~raring1 (daily build of 0.6 branch) DistroRelease: Ubuntu 13.04 How to reproduce: 1. attach au/huawei DATA07 USB modem. 2. click "Enable Mobile Broadband" in network-manager indicator 3. create "au(KDDI) connection" under Japan region with the wizard, then connect it.
Created attachment 230205 [details] debug log of modem-manager Adding --log-level=DEBUG to modem-manager can avoid segfault and keep modem-manager running.
Created attachment 230206 [details] backtrace of modem-manager
Created attachment 230207 [details] valgrind log G_SLICE=always-malloc valgrind --log-file=valgrind.out /usr/sbin/modem-manager
Created attachment 230208 [details] valgrind with -dbg package Please kindly disregard my last valgrind log. That was without -dbg package. This is a new valgrind with modemmanager-dbg package.
Created attachment 230209 [details] log when crash happens
Thanks; specially for the second valgrind log with -dbg installed :-) I think this should be enough to get the issue analyzed.
I fixed the memory errors, ended up being some double free of a GError. I'll set the bug as fixed, please reopen if the crash still happens. This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.