cdma: avoid double free of GError

The GError passed to simple_reg_callback() is coming from
(MMCallbackInfo *)info->error, and therefore shouldn't be freed.

https://bugzilla.gnome.org/show_bug.cgi?id=689289

For reference, reported by valgrind as:

==8985== Invalid free() / delete / delete[] / realloc()
==8985==    at 0x4C2A739: free (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==8985==    by 0x40ED4B: mm_callback_info_unref (mm-callback-info.c:244)
==8985==    by 0x56FB0E7: ??? (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x56FB6E9: ??? (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x56FDADF: g_main_context_dispatch (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x56FDDC7: ??? (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x56FE1C1: g_main_loop_run (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x40DE22: main (main.c:199)
==8985==  Address 0xa600770 is 0 bytes inside a block of size 16 free'd
==8985==    at 0x4C2A739: free (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==8985==    by 0x40EDD3: callback_info_done (mm-callback-info.c:89)
==8985==    by 0x56FB0E7: ??? (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x56FB6E9: ??? (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x56FDADF: g_main_context_dispatch (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x56FDDC7: ??? (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x56FE1C1: g_main_loop_run (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.3400.2)
==8985==    by 0x40DE22: main (main.c:199)